drop Java 8 configs